SetUrlValues ignore nil; return MustJson
fix ghttp Proxy
add ghttp SetClient
fix Remove
fix log
optimize log